refactor: 문자열 계산기 피드백 반영
- NameConverter 리턴타입 Number로 변경하기

- Zero 파라미터 포함 생성자 제거하기

- sum 메서드 Number 객체 선언 부분 NumberFactory from 으로 메서드 변경

- moveCount : for loop으로 변경하기